--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /* Commenting my code */
 /* This is a tag when it has nothing in front of it with brackets behind it*/
-img {
+img 
+{
   width: 400px;
 }
